css: fix font-stretch for chrome, add font-stacks

--- a/assets/ter.css
+++ b/assets/ter.css
@@ -3,8 +3,12 @@
 /* ROOT ------------------------------------------------------------------------- */
 
 :root {
-  --font-sans: system-ui;
-  --font-mono: monospace;
+  --font-sans: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", Arial, sans-serif;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   /* Light theme */
   --color-text-body: #1c1917;
@@ -37,6 +41,7 @@
   --line-height-base: 1.5;
   --line-height-spaced: 1.75;
   --line-height-tight: 1.375;
+  --line-height-xtight: 1.25;
   --line-height-head: 2.5rem;
   --line-height-subhead: 2rem;
   --leading-base: -0.009em;
@@ -72,6 +77,7 @@ h6 {
   letter-spacing: var(--leading-tight);
   font-weight: var(--font-weight-b);
   font-stretch: semi-expanded;
+  font-variation-settings: "wdth" 112.5;
   margin-top: 1.5em;
   margin-bottom: 0.75em;
 }
@@ -80,6 +86,7 @@ h1 {
   font-size: var(--font-size-xl);
   line-height: var(--line-height-head);
   font-stretch: expanded;
+  font-variation-settings: "wdth" 125;
   font-weight: var(--font-weight-xb);
 }
 
@@ -165,6 +172,7 @@ blockquote {
   font-size: var(--font-size-l);
   line-height: var(--line-height-tight);
   font-stretch: semi-condensed;
+  font-variation-settings: "wdth" 87.5;
 }
 
 a img {
@@ -180,20 +188,10 @@ a img {
   border-radius: var(--radius-xs);
 }
 
-/*:is(code, kbd, samp)::after {
-  content: "]";
-  color: var(--color-text-tertiary);
-}
-
-:is(code, kbd, samp)::before {
-  content: "[";
-  color: var(--color-text-tertiary);
-}
-*/
 pre {
   font-family: var(--font-mono);
   font-size: var(--font-size-s);
-  line-height: normal;
+  line-height: var(--line-height-xtight);
   border-left: 1px solid var(--color-text-tertiary);
   overflow: auto;
   opacity: 0.8;
